Adding messages to MessageProperties

--- a/src/main/resources/properties/messages.properties
+++ b/src/main/resources/properties/messages.properties
@@ -1,1 +1,4 @@
 registro.duplicado= Registro duplicado.
+user.registered.successfully=User registered successfully.
+user.already.taken=Username is already taken!
+email.already.in.use=Email Address already in use!
